fix: wrap entity type titles (#270)
* fix: wrap entity type titles

* fix: add right padding

--- a/aether-ui/aether/ui/assets/css/_section-entity-types.scss
+++ b/aether-ui/aether/ui/assets/css/_section-entity-types.scss
@@ -92,9 +92,11 @@
 
   .title {
     padding-left: $indent;
+    padding-right: $indent;
     margin-bottom: .6rem;
     font-size: $font-size-m;
     font-weight: 600;
+    overflow-wrap: break-word;
   }
 
   .name {
